--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     line-height: 1.6;
 }
 
-.container {
+ container {
     width: 80%;
     margin: 0 auto;
 }
@@ -134,7 +134,7 @@ a:hover {
 
 /* Responsividade */
 @media (max-width: 768px) {
-    .container {
+    container {
         width: 90%; /* Aumenta a largura do container em telas menores */
     }
 
