--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ header {
 }
 
 header h1 {
+    background-color:#333
     margin-bottom: 10px;
     font-size: 2.5rem;
 }
@@ -46,7 +47,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     font-size: 1.1rem;
