--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root {
-    -cor-primaria: #3498db;
-    -cor-secundaria: #e74c3c;
-    -cor-fundo: #ecf0f1;
-    -cor-texto: #2c3e50;
+    --cor-primaria: #3498db;
+    --cor-secundaria: #e74c3c;
+    --cor-fundo: #ecf0f1;
+    --cor-texto: #2c3e50;
 }
 
 * {
@@ -13,8 +13,8 @@
 
 body {
     font-family: 'Merriweather', serif;
-    background-color: var(-cor-fundo);
-    color: var(-cor-texto);
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
     line-height: 1.6;
 }
 
@@ -24,7 +24,7 @@ body {
 }
 
 header {
-    background-color: var(-cor-primaria);
+    background-color: var(--cor-primaria);
     padding: 20px 0;
     color: white;
     text-align: center;
@@ -32,7 +32,7 @@ header {
 }
 
 header h1 {
-    background-color:#333
+    background-color: #333; /* Corrigido o erro de falta de ponto e vírgula */
     margin-bottom: 10px;
     font-size: 2.5rem;
 }
@@ -56,7 +56,7 @@ nav ul li a {
 
 nav ul li a:hover {
     text-decoration: underline;
-    color: var(-cor-secundaria);
+    color: var(--cor-secundaria);
 }
 
 .foto-perfil {
@@ -74,7 +74,7 @@ section {
 }
 
 section h2 {
-    color: var(-cor-secundaria);
+    color: var(--cor-secundaria);
     margin-bottom: 20px;
     font-size: 2rem;
     font-weight: 700;
@@ -90,7 +90,7 @@ section h2 {
 }
 
 .projeto h3 {
-    color: var(-cor-primaria);
+    color: var(--cor-primaria);
     margin-bottom: 10px;
     font-size: 1.5rem;
 }
@@ -105,7 +105,7 @@ section h2 {
 }
 
 footer {
-    background-color: var(-cor-secundaria);
+    background-color: var(--cor-secundaria);
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -116,14 +116,14 @@ footer p {
 }
 
 a {
-    color: var(-cor-primaria);
+    color: var(--cor-primaria);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 a:hover {
     text-decoration: underline;
-    color: var(-cor-secundaria);
+    color: var(--cor-secundaria);
 }
 
 @media (max-width: 768px) {
